[package]
name = "turn_tracker"
version = "0.1.0"
authors = ["Spencer Mycek <Spence.Mycek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.9.2"
dialoguer = "0.5.0"
indicatif = "0.14.0"
cursive = "*"
